<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mortgage Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="twentyYears">20 Years</string>
    <string name="tenYears">10 Years</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="full_price">Full Price</string>
    <string name="month_pay_ten">Monthly Payments</string>
    <string name="month_pay_twenty">Monthly Payment</string>
    <string name="loan_amt_ten">Loan Amount</string>
    <string name="loan_amt_twenty">Loan Amount</string>
    <string name="length_mortgage">Length of Mortgage</string>
    <string name="down_payment">Down Payment</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="how_much_string_text">How much?</string>
    <string name="loan_total_string">Loan Total</string>
    <string name="monthly_string">Monthly</string>
    <string name="mortgage_in_years_string">Mortgage Yrs?</string>

</resources>
