<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="com.example.mortgagecalculator.MainActivity" >

    <Space
        android:layout_column="1"
        android:layout_gravity="fill_vertical"
        android:layout_row="1" />

    <TextView
        android:id="@+id/downPayTextView"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/down_payment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/downPayEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:maxLength="9" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/downPayDisplayText"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customLengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="2"
        android:text="@string/mortgage_in_years_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/customLengthSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:max="30"
        android:progress="15" />

    <LinearLayout
        android:id="@+id/amtDisplayTableHeadLinearLayout"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/loanAmtTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/loan_total_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/monthlyAmtTextViewDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/paymentsAmtDisplayText"
        android:text="@string/how_much_string_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/year20LinearLayout"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/loanTotalDisplayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/monthlyTotalDisplayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/purchasePriceTextView"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="0"
        android:text="@string/purchase_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/purchaseAmtDisplayText"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="0"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/purchaseAmtEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:ems="10"
        android:inputType="numberDecimal" />

</GridLayout>
